4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

Adding svnversion.h to SVN was not a good idea.  It will get re-committed over
and over even though that was not the intent.  Removed.
  include/svnversion.h
Kevin Bulgrien 2007-11-09

Add Log() support to python scripts
David Delbecq (tchize) 2007-11-09

Add SVN version to the server version (as -rnnnn suffix) reported at server
startup, by the player "version" command, and by the metaservers.  The method
to for adding the SVN version information was copied from the client.  The
expanded version information should not be generated if the sources are built
outside of an SVN checkout.
  configure.ac
  server/init.c
  server/server.c
  include/version.h
  include/svnversion.h
  include/Makefile.am
  socket/metaserver.c
Kevin Bulgrien 2007-11-08

Remove support for spellcasting objects using sp/dam fields.
 common/loader.l
Andreas Kirschbaum 2007-11-04

Fix collect script to not insert editor_folder lines into nested inventory
objects.
 lib/collect.pl.in
Andreas Kirschbaum 2007-11-03

Adapt alchemy formulas to changed archetypes.
 lib/formulae: rename "shoes" to "pair of shoes".
Andreas Kirschbaum 2007-11-03

Remove useless 'start_holding' field.
 include/object.h
 server/server.c
Nicolas Weeger 2007-10-28

Remove unused 'tooltype' field.
 common/loader.l
 include/object.h
Nicolas Weeger 2007-10-28

Fix for bug #1693250: loader.c isn't correctly generated.
 configure.ac: remove AM_MAINTAINER_MODE macro, no one remembers
  why it was set.
Nicolas Weeger 2007-10-27

server/login.c: Fix file handle leaks in save_player() and check_login().
Andreas Kirschbaum 2007-10-25

Don't remove inventory if player save fails. Warn online DMs.
 server/login.c
Nicolas Weeger 2007-10-24
